<resources>
    <string name="app_name">BMI</string>

    <string name="digitSeven">7</string>
    <string name="digitEight">8</string>
    <string name="digitNine">9</string>
    <string name="digitFour">4</string>
    <string name="digitFive">5</string>
    <string name="digitSix">6</string>
    <string name="digitOne">1</string>
    <string name="digitTwo">2</string>
    <string name="digitThree">3</string>
    <string name="go">GO</string>
    <string name="digitZero">0</string>
    <string name="decimal">.</string>
    <string name="centimeter">centimeter</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="ac">AC</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="oneseventy">170</string>
    <string name="height">Height</string>
    <string name="kilogram">Kilogram</string>
    <string name="sixty">60</string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI</string>
    <string name="for_deleting_one_text">for deleting one text</string>


</resources>
